header section done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Knowledge Vault</title>
+  <!-- css link -->
+  <link rel="stylesheet" href="style.css">
+  <!-- inter font link  -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <nav id="navigation">
+      <div class="logo">
+        <img src="./assets/logo-navbar.png" alt="">
+      </div>
+
+      <ul class="menu">
+        <li><a href="">Features</a></li>
+        <li><a href="">How It Works</a></li>
+        <li><a href="">Why It's Different</a></li>
+      </ul>
+
+      <button class="btn"><a href="">Get Early Access</a></button>
+    </nav>
+    
+    <section id="hero">
+      <div class="hero_content">
+        <div class="early_access_frame">
+        <div class="circle_icon"></div>
+        <p class="early_access_info">Early Access Now Open</p>
+        </div>
+
+        <h2>
+          Structured thinking,<br><span style="color: #30B868; font-size: 72px;">not just note-taking.</span>
+        </h2>
+        <p class="hero_discription">
+          A private space to store notes, links, and learning summaries — designed to <br>
+          help you think clearly, connect ideas, and turn learning into long-term knowledge.
+        </p>
+
+        <div class="hero_buttonset">
+          <button class="btn2"><a href="">Start Building Your Vault</a></button>
+          <button class="btn2"><a href="">See How It Works</a></button>
+          
+        </div>
+      </div>
+    </section>
+  </header>
+  <main>
+    <div class="circle"></div>
+  </main>
+  <footer></footer>
   
 </body>
 </html>
