notes section complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+<!-- font awesome cdn -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <header>
@@ -43,15 +46,46 @@
         </p>
 
         <div class="hero_buttonset">
-          <button class="btn2"><a href="">Start Building Your Vault</a></button>
-          <button class="btn2"><a href="">See How It Works</a></button>
+          <button class="btn2"><a href="">Start Building Your Vault <i class="fa-solid fa-arrow-right" style="color: white;"></i></a></button>
+          <button class="btn2"><a href="">See How It Works <i class="fa-regular fa-circle-play" style="color: white;"></i></a></button>
           
         </div>
       </div>
     </section>
   </header>
   <main>
-    <div class="circle"></div>
+    <section id="notes">
+      <div class="notes_content">
+        <h2>Notes don't fail, Structure does.</h2>
+        <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+      </div>
+
+      <div class="notes_cardbox">
+        <div class="notes_card">
+          <img src="./assets/Vector.png" alt="">
+          <h3>Scattered notes</h3>
+          <p>Your ideas live in 10 different apps, none of them connected.</p>
+        </div>
+
+        <div class="notes_card">
+          <img src="./assets/Bookmarks.png" alt="">
+          <h3>Bookmark overload</h3>
+          <p>Hundreds of saved links you'll never revisit or remember.</p>
+        </div>
+
+        <div class="notes_card">
+          <img src="./assets/Brain.png" alt="">
+          <h3>No idea connections</h3>
+          <p>Insights stay isolated, never building into bigger understanding.</p>
+        </div>
+
+        <div class="notes_card">
+          <img src="./assets/Info.png" alt="">
+          <h3>Forgetting what <br>You learned</h3>
+          <p>Knowledge fades because there's no system to retain it.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
   
