early access section done

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="solution">
       <div class="solution_conainer">
         <div class="solution_img">
-          <img src="./assets/knowledge.png" alt="">
+          <img src="./assets/knowledge.png" alt="" style="max-width: 600px;">
         </div>
 
         <div class="solution_info">
@@ -102,7 +102,7 @@
           </p>
 
           <p class="solution_list">
-            <img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one.
+            <img src="./assets/CheckCircle.png" alt=""">Capture ideas with structure built-in from day one.
           </p>
           
           <p class="solution_list">
@@ -120,6 +120,18 @@
         </div>
       </div>
     </section>
+
+    <div id="get_early_access">
+      <div class="get_early_access_info">
+        <h2>Ready to think more clearly?</h2>
+        <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+        <button class="btn2" style="margin-bottom: 16px;"><a href="">Get Early Access <i class="fa-solid fa-arrow-right" style="color: white;"></i></a></button>
+        <p>Free during early access • No credit card needed</p>
+      </div>
+
+    </div>
+
+
   </main>
   <footer></footer>
   
