--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <div id="get_early_access">
+    <section id="get_early_access">
       <div class="get_early_access_info">
         <h2>Ready to think more clearly?</h2>
         <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
@@ -129,11 +129,28 @@
         <p>Free during early access • No credit card needed</p>
       </div>
 
-    </div>
+    </section>
+
+    <footer>
+      <div class="footer_container">
+
+        <img src="./assets/logo-footer.png" alt="">
+
+        <div class="social_icon">
+          <p>Social Links</p>
+          <div class="icon">
+            <i class="fa-brands fa-x-twitter" style="color:white;"></i>
+            <i class="fa-brands fa-linkedin" style="color:white;"></i>
+            <i class="fa-brands fa-facebook" style="color:white;"></i>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </footer>
 
 
   </main>
-  <footer></footer>
   
 </body>
 </html>
