hover effect done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </p>
 
         <div class="hero_buttonset">
-          <button class="btn2"><a href="">Start Building Your Vault <i class="fa-solid fa-arrow-right" style="color: white;"></i></a></button>
-          <button class="btn2"><a href="">See How It Works <i class="fa-regular fa-circle-play" style="color: white;"></i></a></button>
+          <button class="btn2"><a href="">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></a></button>
+          <button class="btn3"><a href="">See How It Works <i class="fa-regular fa-circle-play"></i></a></button>
           
         </div>
       </div>
